# osai

./: README.md  README.zh.md  components.json  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx  main.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  indexer.rs  main.rs  models.rs  prompts.rs  utils.rs
src-tauri/src/ai/: claude.rs  mod.rs  openai.rs
src-tauri/src/commands/: ai_operations.rs  execute_code.rs  file_operations.rs  mod.rs
src-tauri/src/file/: file_handler.rs  mod.rs
src/components/: BottomInputContainer.tsx  Calculator.tsx  ExecutionStepComponent.tsx  FileListDisplay.tsx  FileUploadModal.tsx  OsaiApp.tsx  Preview.tsx  SearchBar.tsx  SearchResults.tsx  Settings.tsx  SettingsModal.tsx  SideDrawer .tsx  theme-provider.tsx
src/components/ui/: scroll-area.tsx  select.tsx  textarea.tsx
src/config/: aiProviders.ts
src/hooks/: useAI.ts  useHotkey.ts  useSearch.ts  useSettings.ts  useSpeechRecognition.ts
src/services/: CalculatorService.ts  FileSystemService.ts  SearchService.ts  SystemCommandService.ts
src/utils/: constants.ts  fileUtils.ts  i18n.ts
