[package]
name = "osai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "osai"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [ "os-all", "http-request", "window-set-position", "window-set-size", "window-minimize", "window-unmaximize", "fs-read-dir", "window-hide", "window-close", "fs-write-file", "window-unminimize", "fs-read-file", "window-show", "window-start-dragging", "window-maximize", "shell-open"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
window-shadows = "0.2.0"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
sysinfo = "0.29.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
