[package]
name = "osai"
version = "1.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "osai"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [ "shell-open", "dialog-all", "fs-all", "os-all", "http-request", "window-set-position", "window-set-size", "window-minimize", "window-unmaximize", "window-hide", "window-close", "window-unminimize", "window-show", "window-start-dragging", "window-maximize"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
window-shadows = "0.2.0"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v4"] }
sysinfo = "0.29.0"
id3 = "1.5"
base64 = "0.21"
image = "0.24"
docx-rs = "0.4"
calamine = "0.22"
zip = "0.6"
epub = "2.1"
xml-rs = "0.8"
serde_yaml = "0.9"
mime_guess = "2.0"
thiserror = "1.0"
anyhow = "1.0"
lopdf = "0.29.0"
pdf-extract = "0.6.4"
rayon = "1.5"

[package.metadata.bundle]
identifier = "com.osai.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
resources = ["resources"]
copyright = ""
category = "Productivity"
short_description = ""
long_description = """
...
"""

[package.metadata.bundle.windows]
subsystem = "windows"

[features]
custom-protocol = ["tauri/custom-protocol"]
